force-app/main/default/objects/giic_Planning_POL_And_PRL_Mapping__mdt/giic_Planning_POL_And_PRL_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Field Maping between Purchase Order Line and Purchase Requistion Line.</description>
    <label>Planning POL And PRL Mapping</label>
    <pluralLabel>Planning POL And PRL Mapping</pluralLabel>
</CustomObject>