force-app/main/default/objects/giic_Planning_POL_And_PRL_Mapping__mdt/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to deactivate metdata record</description>
    <inlineHelpText>Check to deactivate metdata record</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>