force-app/main/default/objects/giic_Planning_POL_And_PRL_Mapping__mdt/fields/PO_Line_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PO_Line_Field_API_Name__c</fullName>
    <description>Purchase Order Line Field API Name</description>
    <inlineHelpText>Purchase Order Line Field API Name</inlineHelpText>
    <label>PO Line Field API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>