force-app/main/default/objects/giic_Planning_POL_And_PRL_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PO_Line_Field_API_Name__c</columns>
    <columns>PR_Line_Field_API_Name__c</columns>
    <columns>Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>